# spark

./: .gitignore  GEMINI.md  README.md  main.py  pyproject.toml
src/spark/: main.py
tests/: test_main.py
